<resources>
    <string name="app_name">World News</string>

    <!--Twitter SDK Information-->
    <string name="com.twitter.sdk.android.CONSUMER_KEY">iCcrwbKvO3ZRYDqC2d37g3VNA</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">NLxJwgGUGLFOWtpHCGj98cgnb1bQdVtcXzdPuGeMz7LdEhj0o1</string>

    <!--Messages to Show-->
    <string name="no_data">Sorry No Data</string>
    <string name="no_connection">No Internet Connection</string>

    <!--Menu Name-->
    <string name="news_settings">Settings</string>
    <string name="share">Share</string>

    <!--News Country Edit-->
    <string name="news_country_label" translatable="false">Country</string>
    <string name="news_country_key" translatable="false">q</string>
    <string name="news_country_default" translatable="false">usa</string>

    <!--News Order By List-->
    <string name="news_order_label" translatable="false">Order By</string>
    <string name="news_order_key" translatable="false">order_by</string>
    <string name="news_order_default" translatable="false">newest</string>

     <!--Notification preferences-->
    <string name="noti_turn_label" translatable="false">Notification</string>
    <string name="noti_turn_bass_key" translatable="false">noti_key</string>
    <string name="pref_show_true">Turn on</string>
    <string name="pref_show_false">Turn off</string>

    <!--Values-->
    <string name="newest" translatable="false">newest</string>
    <string name="oldest" translatable="false">oldest</string>
    <string name="relevance" translatable="false">relevance</string>
    <string name="search">Search</string>
</resources>
