<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="@string/news_country_default"
        android:key="@string/news_country_key"
        android:summary="@string/news_country_default"
        android:title="@string/news_country_label" />

    <ListPreference
        android:defaultValue="@string/news_order_default"
        android:entries="@array/order_by"
        android:entryValues="@array/order_by"
        android:key="@string/news_order_key"
        android:summary="@string/news_order_default"
        android:title="@string/news_order_label" />

    <CheckBoxPreference
        android:defaultValue="@bool/noti_turn_default"
        android:key="@string/noti_turn_bass_key"
        android:summary="@string/pref_show_true"
        android:summaryOff="@string/pref_show_false"
        android:title="@string/noti_turn_label" />
</PreferenceScreen>